# pytest-skill-engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pricing.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  hero-tests.yml  integration.yml  release.yml  stale.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/fenster/: charter.md  history.md
.squad/agents/hockney/: charter.md  history.md
.squad/agents/keaton/: charter.md  history.md
.squad/agents/mcmanus/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/verbal/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: fenster-core-fixes.md
.squad/identity/: now.md  wisdom.md
docs/: DESIGN.md  README.md  RESTRUCTURE_PLAN.md  api-reference.md  assertions.md  cli-server.md  configuration.md  index.md  mcp-server.md  migration.md  reporting.md  robots.txt  skills.md
docs/contributing/: architecture.md  index.md  releasing.md  report-structure.md
docs/demo/: hero-report.html  hero-report.json  hero-report.md
docs/explanation/: agents.md  ai-analysis.md  ai-reports.md  choosing-a-harness.md  evals.md  index.md  skill-engineering.md  tdd-for-ai.md
docs/getting-started/: ab-testing-servers.md  comparing.md  custom-agents.md  custom-instructions.md  index.md  iterations.md  mcp-prompts.md  plugins.md  prompt-files.md  sessions.md  skills.md  system-prompts.md
docs/how-to/: ci-cd.md  complete-example.md  cost-estimation.md  fixture-testing.md  generate-reports.md  image-assertions.md  index.md  multi-dimension-scoring.md  test-cli-tools.md  test-coding-agents.md  test-mcp-servers.md  test-plugins.md  visual-testing.md
docs/reference/: api.md  assertions.md  cli.md  configuration.md  index.md  result.md  test-harnesses.md
docs/reports/: 01_single_agent.html  01_single_agent.md  02_multi_agent.html  02_multi_agent.md  03_multi_agent_sessions.html  03_multi_agent_sessions.md  04_agent_selector.html  04_agent_selector.md  05_hero.html  05_prompt_comparison.html  05_prompt_comparison.md  06_model_prompt_matrix.html  06_model_prompt_matrix.md  07_skill_improvement.html  07_skill_improvement.md  08_cli_server.html  08_cli_server.md  09_ab_servers.html  09_ab_servers.md  10_dimension_detection.html  10_dimension_detection.md
examples/: README.md
scripts/: generate_fixture_html.py
src/pytest_aitest/: __init__.py  cli.py  config.py  engine.py  fixtures.py  hooks.py  plugin.py  reporting.py  result.py  servers.py
src/pytest_aitest/copilot/: __init__.py  agent.py  agents.py  events.py  fixtures.py  model.py  personas.py  result.py  runner.py
src/pytest_aitest/core/: __init__.py  agent.py  errors.py  prompt.py  result.py  serialization.py  skill.py
src/pytest_aitest/execution/: __init__.py  cost.py  engine.py  optimizer.py  pydantic_adapter.py  rate_limiter.py  retry.py  servers.py  skill_tools.py
src/pytest_aitest/fixtures/: __init__.py  factories.py  judge.py  llm_assert_image.py  llm_score.py  run.py
src/pytest_aitest/prompts/: __init__.py  ai_summary.md  coding_agent_analysis.md
src/pytest_aitest/reporting/: __init__.py  aggregator.py  collector.py  generator.py  insights.py  markdown.py
src/pytest_aitest/templates/: report.html
src/pytest_aitest/testing/: __init__.py  banking_mcp.py  cli_server.py  mcp_server.py  store.py  todo.py  todo_mcp.py  weather.py  weather_mcp.py
src/pytest_skill_engineering/: __init__.py  cli.py  hooks.py  plugin.py  plugin_options.py  plugin_recording.py  plugin_report.py
src/pytest_skill_engineering/copilot/: __init__.py  agent.py  agents.py  config.py  eval.py  evals.py  events.py  fixtures.py  judge.py  model.py  personas.py  result.py  runner.py
src/pytest_skill_engineering/core/: __init__.py  agent.py  agents.py  errors.py  eval.py  evals.py  plugin.py  prompt.py  result.py  serialization.py  skill.py  skill_evals.py  skill_grading.py
src/pytest_skill_engineering/execution/: __init__.py  clarification.py  cli_toolset.py  cost.py  engine.py  optimizer.py  pydantic_adapter.py  rate_limiter.py  servers.py  skill_tools.py
tests/: __init__.py
tests/fixtures/: conftest.py  scenario_01_single_agent.py  scenario_02_multi_agent.py  scenario_03_sessions.py  scenario_04_agent_selector.py  scenario_05_prompt_comparison.py  scenario_06_model_prompt_matrix.py  scenario_07_skill_improvement.py  scenario_08_cli_server.py  scenario_09_ab_servers.py  scenario_10_dimension_detection.py
tests/integration/: README.md  __init__.py  conftest.py  test_ab_servers.py  test_ai_summary.py  test_basic_usage.py  test_cli_server.py  test_dimension_detection.py  test_iterations.py  test_matrix.py  test_model_benchmark.py  test_prompt_arena.py  test_scoring.py  test_sessions.py  test_skill_improvement.py  test_skills.py
tests/showcase/: __init__.py  test_hero.py
tests/unit/: __init__.py  test_agent.py  test_aggregator.py  test_clarification.py  test_cli.py  test_cli_server_process.py  test_config.py  test_copilot_agent.py  test_copilot_agents.py  test_copilot_event_mapper.py  test_copilot_fixtures.py  test_copilot_model.py  test_copilot_optimizer.py  test_copilot_personas.py  test_copilot_plugin.py  test_copilot_result.py  test_evals.py  test_generate_md.py  test_hooks.py  test_html_reports.py  test_human_readable_names.py  test_insights.py  test_iterations.py  test_json_contract.py  test_junit_xml.py  test_llm_assert_image.py  test_llm_score.py  test_mcp_servers.py  test_multimodal_extraction.py  test_prompt.py  test_rate_limiter.py  test_reporting.py  test_result.py  test_retry.py  test_skill.py  test_store.py  test_tool_filter.py  test_tool_images.py
tests/visual/: conftest.py  test_01_single_agent.py  test_04_agent_selector.py
(+123 files in other folders)
