[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-aitest"
version = "0.4.0"
description = "Pytest plugin for testing AI agents with MCP and CLI servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stefan Brunner" }
]
keywords = ["pytest", "ai", "llm", "mcp", "testing", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=9.0",
    "mcp>=1.26",
    "pydantic>=2.0",
    "markdown>=3.10",
    "htpy>=25.12.0",
    "mdutils>=1.8.1",
    "azure-identity>=1.25",
    "pydantic-ai>=1.59.0",
    "pydantic-evals>=0.3",
    "litellm>=1.81.12",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3",
    "python-dotenv>=1.2",
    "ruff>=0.14",
    "pyright>=1.1.408",
    "pre-commit>=4.5",
    "typeguard>=4.4",
]
test = [
    "syrupy>=5.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.24",
    "pillow>=11.0",
    "cairosvg>=2.7",
]

[project.scripts]
pytest-aitest-report = "pytest_aitest.cli:main"

[project.entry-points.pytest11]
aitest = "pytest_aitest.plugin"

[project.urls]
Homepage = "https://github.com/sbroenne/pytest-aitest"
Repository = "https://github.com/sbroenne/pytest-aitest"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_aitest"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/pytest_aitest/**/*.py",
    "src/pytest_aitest/**/*.md",
    "src/pytest_aitest/**/*.html",
    "src/pytest_aitest/**/*.css",
    "src/pytest_aitest/**/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.per-file-ignores]
# Test harnesses have long tool descriptions for LLM readability
"src/pytest_aitest/testing/*.py" = ["E501"]
# Test files have long descriptions and variable declarations
"tests/**/*.py" = ["E402", "E501", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Suppress third-party deprecation warnings we can't fix
filterwarnings = [
    "ignore:enable_cleanup_closed:DeprecationWarning:aiohttp",
]
# pytest-aitest configuration for this project's own tests.
# This demonstrates the recommended setup - configure once in pyproject.toml.
# LLM auth is handled by Pydantic AI via env vars (AZURE_API_BASE, OPENAI_API_KEY, etc.)
addopts = """
--aitest-summary-model=azure/gpt-5.2-chat
--aitest-html=aitest-reports/report.html
"""
markers = [
    "integration: marks tests as integration tests (require LLM credentials)",
    "aitest: AI agent tests",
    "basic: basic usage tests (banking and todo)",
    "model: tests with multiple models",
    "sysprompt: tests with multiple system prompts",
    "skill: tests with skills",
    "abtest: A/B server comparison tests",
    "cli: CLI server tests",
]

# UV/PEP 735 dependency groups (for uv sync)
[dependency-groups]
dev = [
    "pytest-aitest[dev,test,docs]",
]
